# Robotic-Localisation

./: .gitignore  README.md
scripts/: avoidreal.sh  avoidsim.sh  mapping_live_auto.sh  mapping_live_joy.sh  mapping_live_key.sh  mapping_sim_auto.sh  mapping_sim_joy.sh  mapping_sim_key.sh  ps4_teleop.sh  ssh.sh  tb3_bringup.sh
src/DynamixelSDK/ros/dynamixel_sdk/src/dynamixel_sdk/: group_bulk_read.cpp  group_sync_read.cpp
src/maps/live/map_20250328_162900/: map.pgm  map.yaml
src/maps/live/map_20250329_155016/: map.pgm  map.yaml
src/maps/live/map_20250331164300/: map.pgm  map.yaml
src/maps/sim/map_20250329_001818/: map_20250329_001818.pgm  map_20250329_001818.yaml
src/maps/sim/map_20250329_001954/: map.pgm
src/maps/sim/map_20250329_004833/: map.pgm  map.yaml
src/maps/sim/map_20250329_121500/: map.pgm  map.yaml
src/maps/sim/map_20250330_183137/: map.pgm
src/maps/sim/map_20250330_183558/: map.pgm  map.yaml
src/maps/sim/map_20250330_202100/: map.pgm  map.yaml
src/maps/sim/map_20250330_204400/: map.pgm
src/turtlebot3/turtlebot3_cartographer/launch/: cartographer.launch.py
src/turtlebot3/turtlebot3_drive/: CMakeLists.txt  package.xml
src/turtlebot3/turtlebot3_drive/include/turtlebot3_drive/: turtlebot3_drive.hpp
src/turtlebot3/turtlebot3_drive/src/: turtlebot3_drive.cpp
src/turtlebot3/turtlebot3_example/: package.xml  setup.py
src/turtlebot3/turtlebot3_example/turtlebot3_example/turtlebot3_obstacle_avoidance/: turtlebot3_obstacle_avoidance.py
src/turtlebot3/turtlebot3_navigation2/config/: global_planner_params.yaml
src/turtlebot3/turtlebot3_navigation2/launch/: navigation2.launch.py
src/turtlebot3/turtlebot3_obstacle_avoid/: CMakeLists.txt  README.md  package.xml
src/turtlebot3/turtlebot3_obstacle_avoid/launch/: avoidreal.launch.py  avoidsim.launch.py
src/turtlebot3/turtlebot3_obstacle_avoid/src/: Turtlebot3Driver.cpp  Turtlebot3Driver.hpp  main.cpp
src/turtlebot3/turtlebot3_pathfind/: CMakeLists.txt  README.md  package.xml
src/turtlebot3/turtlebot3_pathfind/launch/: astarreal.launch.py  astarsim.launch.py
src/turtlebot3/turtlebot3_pathfind/src/: AStarPlanner.cpp  AStarPlanner.hpp  Turtlebot3Driver.hpp  main.cpp
src/turtlebot3_python_simulations/: package.xml  setup.cfg  setup.py
src/turtlebot3_python_simulations/turtlebot3_python_simulations/: a_star_pathplanning.py
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: maze3x3.launch.py  maze4x4.launch.py  spawn_turtlebot3.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/maze3x3/: maze3x3.sdf  model.config
src/turtlebot3_simulations/turtlebot3_gazebo/models/maze4x4/: maze4x4.sdf  maze4x4_1.sdf  model.config
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: maze3x3.world  maze4x4_1.world
