<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_python_simulations</name>
  <version>1.0.0</version>
  <description>A* pathfinding with DWA for TurtleBot3</description>
  <maintainer email="gideon@your-email.com">Gideon</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://your-website.com</url>
  <url type="repository">https://github.com/your-repo</url>
  <url type="bugtracker">https://github.com/your-repo/issues</url>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
