<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_pathfind</name>
  <version>1.0.0</version>
  <description>This package is for the Turtlebot3Driver files for an autonomous robot that acts like a Roomba Vacuum Cleaner. The robot's functionality is implemented with ROS 2 and tested within the Gazebo Simulation Environment. </description>
  <maintainer email="sggtladi@liverpool.ac.uk">gideon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
